tdf#123243 DOCX import: make increased anchored obj spacing cond more strict

Regression from commit 8b73bafbc18acb4dd8911d2f2de8158d98eb6144
(tdf#115719 DOCX import: increase paragraph spacing for anchored
objects, 2018-02-14), which is an import-time workaround for a Word
layout bug.

Re-checking the original document from that bug, this only happens with
more anchored shapes (to the same paragraph), so make the workaround
condition more strict, fixing the layout of this bugdoc.

(Which means tdf115719.docx and tdf115719b.docx are modified to be more
close to the original bugdoc.)

Just checked, sadly Word's layout bug is still there in MSO 2019, so
can't revert our emulation of it (not yet).

Change-Id: I26f74a497b7718f8f3a2eadac481c8722e85e680