writerfilter/source/dmapper/PropertyMap.cxx
@@ -1273,8 +1273,9 @@ void SectionPropertyMap::HandleIncreasedAnchoredObjectSpacing(DomainMapper_Impl&
     std::vector<AnchoredObjectInfo>& rAnchoredObjectAnchors = rDM_Impl.m_aAnchoredObjectAnchors;
     for (auto& rAnchor : rAnchoredObjectAnchors)
     {
-        // Ignore this paragraph when there is a single shape only.
-        if (rAnchor.m_aAnchoredObjects.size() < 2)
+        // Ignore this paragraph when there are not enough shapes to trigger the Word bug we
+        // emulate.
+        if (rAnchor.m_aAnchoredObjects.size() < 4)
             continue;
 
         // Analyze the anchored objects of this paragraph, now that we know the
